--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "generate": "nuxt generate",
     "test": "jest",
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
- },
+  },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "bootstrap": "^4.6.2",
@@ -19,6 +19,7 @@
     "nuxt-vuex-localstorage": "^1.3.0",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
+    "vue-star-rating": "^1.7.0",
     "vue-template-compiler": "^2.7.10"
   },
   "devDependencies": {
